fixed overflow

--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -107,6 +107,11 @@
     
 
 
+    @media (max-width: 900px) {
+      .custom-navbar {
+        display: none; 
+      }
+    }
 
  
     
