--- a/frontend/src/styles/Landingpage.css
+++ b/frontend/src/styles/Landingpage.css
@@ -1,7 +1,7 @@
 .landing-page {
     position: relative; 
-    width: 100vw;
-    height: 100vh; 
+    width: 100%; 
+    min-height: 100vh; 
     
   }
   
@@ -9,7 +9,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%; 
+    min-width: 100%; 
+    overflow: hidden; 
     z-index: 10; 
   }
   
