--- a/frontend/src/styles/Sections.css
+++ b/frontend/src/styles/Sections.css
@@ -1,8 +1,8 @@
 
   .section-2 , .section-3 , .section-4,.section-5,.section-6{
     position: relative; 
-    width: 100%;
-    height: 100vh; 
+    min-width: 100%;
+    min-height: 100vh; 
     background-color: #1B2D1F;
   }
   
@@ -10,6 +10,7 @@
   .section-1 {
     position: relative;
     min-height: 100vh;
+    min-width: 100%;
     display: flex;
     justify-content: center; 
     align-items: center; 
